[project]
name = "KubSU"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.37",
    "psycopg[binary]==3.2.4",
    "requests>=2.31.0"  # Для healthcheck
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
    "pytest-cov>=4.1.0"  # Для покрытия тестами
]

dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "pre-commit>=3.3.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
