[project]
name = "KubSU"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.37",
    "psycopg[binary]==3.2.4",
    "requests>=2.31.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
